--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": ">=0.8.4"
   },
   "dependencies": {
-    "express": "3.x",
     "config": "0.4.15",
+    "express": "3.x",
+    "phantom": "^1.0.0",
     "request": "2.9.153"
   }
 }
